--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,16 +1,6 @@
 $grid-gutter-width: 1.25rem;
 $container-padding-x: 0.9375rem;
 
-// $spacer: 1.25rem;
-// $spacers: (
-//   0: 0,
-//   1: $spacer / 4,
-//   2: $spacer / 2,
-//   3: $spacer,
-//   4: $spacer * 1.5,
-//   5: $spacer * 3,
-// );
-
 // $grid-breakpoints: (
 //   xs: 0,
 //   sm: 576px,
@@ -42,3 +32,15 @@ $container-max-widths: (
   // md: 720px,
   xl: 1240px
 );
+
+
+// COLORS
+
+$white: #ffffff;
+$white-1: #fbfbfb;
+$yellow: #ffe200;
+$blue: #1467ff;
+$blue-dark: #084fd1;
+$blue-light: #bbd3ff;
+$grey-dark: #282828;
+$black-1: #1a223f;
