Добавляет main-banner

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -42,13 +42,13 @@
   font-display: swap;
 }
 
-@font-face {
-  font-family: "Jost";
-  src: local("Jost Bold"),
-    local("Jost-Bold"),
-    url("../fonts/jost-bold.woff2") format("woff2"),
-    url("../fonts/jost-bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+//   font-family: "Jost";
+//   src: local("Jost Bold"),
+//     local("Jost-Bold"),
+//     url("../fonts/jost-bold.woff2") format("woff2"),
+//     url("../fonts/jost-bold.woff") format("woff");
+//   font-weight: 700;
+//   font-style: normal;
+//   font-display: swap;
+// }
