--- a/src/scss/_scaffolding.scss
+++ b/src/scss/_scaffolding.scss
@@ -14,10 +14,11 @@ body {
   margin: 0;
   min-width: 320px;
   font-family: "Stolzl", "Arial", sans-serif;
-  font-weight: normal;
+  font-weight: 300;
   font-style: normal;
   font-size: 1rem;
   line-height: 1.5rem;
+  letter-spacing: 0.04em;
   background-color: $white-1;
   color: $grey-dark;
 }
