--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -46,3 +46,5 @@ $blue-dark: #084fd1;
 $blue-light: #bbd3ff;
 $grey-dark: #282828;
 $black-1: #1a223f;
+$light-grey: #bfbfbf;
+$special-grey: #5d5d5d;
