--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,9 +35,12 @@
 @import "components/header";
 @import "components/logo";
 @import "components/nav-toggle";
+@import "components/navigation";
 @import "components/main-nav";
 @import "components/user-nav";
 @import "components/button";
 @import "components/section-xxl";
 @import "components/main-banner";
 @import "components/advantages";
+@import "components/footer";
+@import "components/social";
