--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,3 +41,5 @@
 @import "components/section-xxl";
 @import "components/main-banner";
 @import "components/advantages";
+@import "components/form";
+@import "components/calculator";
