--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,16 +1,29 @@
 .footer {
-  padding: 30px 0;
+  padding: 0 15px;
 
   @include media-breakpoint-up(lg) {
     padding: 37px 0;
   }
 }
 
+.footer__logo {
+  margin-bottom: 35px;
+
+  @include media-breakpoint-up(lg) {
+    padding: 0;
+  }
+}
+
 .footer__navigation {
   background-color: $grey-dark;
   border-radius: 20px;
-  padding: 107px 0 100px 0;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
+  padding: 44px 25px 39px 25px;
+
+  @include media-breakpoint-up(lg) {
+    padding: 105px 0 100px 0;
+    margin-bottom: 60px;
+  }
 }
 
 .footer__bottom,
@@ -21,11 +34,24 @@
 }
 
 .footer__bottom {
-  justify-content: space-between;
+  flex-direction: column-reverse;
+
+  @include media-breakpoint-up(lg) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .footer__social {
-  margin-right: 90px;
+  flex-direction: column;
+  margin-bottom: 33px;
+
+  @include media-breakpoint-up(lg) {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 0;
+    margin-right: 92px;
+  }
 }
 
 .footer__social-text,
@@ -34,20 +60,24 @@
 }
 
 .footer__copyright {
-  font-family: "Stolzl", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
   line-height: 29px;
-  color: $special-grey;
+  color: $grey-special;
 }
 
 .footer__social-text {
-  font-family: "Stolzl", "Arial", sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 16px;
   line-height: 22px;
   color: $black-1;
-  margin-right: 33px;
+  margin-bottom: 10px;
+
+  @include media-breakpoint-up(lg) {
+    margin-right: 33px;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
 }
