--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -17,7 +17,7 @@
 }
 
 .navigation__list:not(:last-child) {
-  margin-bottom: 40px;
+  margin-bottom: 34px;
 
   @include media-breakpoint-up(lg) {
     margin-bottom: 0;
@@ -25,18 +25,22 @@
 }
 
 .navigation-item:not(:last-child) {
-  margin-bottom: 10px;
+  margin-bottom: 2px;
 
   @include media-breakpoint-up(lg) {
-    margin-bottom: 6px;
+    margin-bottom: 8px;
   }
 }
 
 .navigation__link {
-  font-family: "Stolzl", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 16px;
-  line-height: 22px;
-  color: $light-grey;
+  font-size: 14px;
+  line-height: 18px;
+  color: $grey-light;
+
+  @include media-breakpoint-up(lg) {
+    font-size: 16px;
+    line-height: 22px;
+  }
 }
