--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-
   padding: 0;
-  margin: 3px 0 0 0;
+  margin: 0;
 }
 
 .social__item:not(:last-child) {
