--- a/src/scss/components/_calculator.scss
+++ b/src/scss/components/_calculator.scss
@@ -4,13 +4,20 @@
 }
 
 .calculator__field {
-  width: calc(50% - 10px);
-  margin-right: 20px;
+  width: 100%;
   margin-bottom: 20px;
 
-  &:nth-child(2n) {
-    margin-right: 0;
+  @include media-breakpoint-up(md) {
+    width: calc(50% - 10px);
+    margin-right: 20px;
+
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
   }
+
+
 
   &--submit {
     display: flex;
