--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -4,15 +4,22 @@
 }
 
 .form__input {
-  font-size: 20px;
-  line-height: 36px;
+  width: 100%;
+  height: 50px;
+  padding: 8px 22px;
+  font-size: 18px;
+  line-height: 32px;
   font-weight: 500;
   color: $black-1;
-  width: 100%;
-  height: 60px;
-  padding: 11px 22px;
   border: 1px solid $black;
   border-radius: 20px;
   outline: none;
-  box-shadow: 0 0 30px 0 rgba($black, 0.05);
+
+  @include media-breakpoint-up(md) {
+    height: 60px;
+    padding: 11px 22px;
+    font-size: 20px;
+    line-height: 36px;
+    box-shadow: 0 0 30px 0 rgba($black, 0.05);
+  }
 }
