--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -23,3 +23,11 @@
     box-shadow: 0 0 30px 0 rgba($black, 0.05);
   }
 }
+
+.form__input--mobile {
+  text-align: center;
+
+  @include media-breakpoint-up(lg) {
+    text-align: start;
+  }
+}
