--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,6 +43,7 @@
 @import "components/button";
 @import "components/main-banner";
 @import "components/advantages";
+@import "components/subscribe";
 @import "components/social";
 @import "components/form";
 @import "components/calculator";
