--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -38,6 +38,8 @@ $container-max-widths: (
 
 // COLORS
 
+$black: #000000;
+$black-1: #1a223f;
 $white: #ffffff;
 $white-1: #fbfbfb;
 $yellow: #ffe200;
@@ -45,6 +47,6 @@ $blue: #1467ff;
 $blue-dark: #084fd1;
 $blue-light: #bbd3ff;
 $grey-dark: #282828;
-$black-1: #1a223f;
 $grey-light: #bfbfbf;
+$grey-medium: #808080;
 $grey-special: #5d5d5d;
