--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,3 +47,5 @@
 @import "components/social";
 @import "components/form";
 @import "components/calculator";
+@import "components/tariffs";
+@import "components/tariff";
