--- a/src/scss/components/tariff.scss
+++ b/src/scss/components/tariff.scss
@@ -22,11 +22,78 @@
   }
 
   &--econom::before {
-    width: 134px;
-    height: 134px;
-    top: -60px;
-    right: -20px;
+    width: 100px;
+    height: 100px;
+    top: -30px;
+    right: -10px;
     background-image: url("../img/tariffs/econom.png");
+
+    @include media-breakpoint-up(lg) {
+      width: 134px;
+      height: 134px;
+      top: -60px;
+      right: -20px;
+    }
+  }
+
+  &--one::before {
+    width: 83px;
+    height: 84px;
+    top: -30px;
+    right: -10px;
+    background-image: url("../img/tariffs/one.png");
+
+    @include media-breakpoint-up(lg) {
+      width: 111px;
+      height: 113px;
+      top: -40px;
+      right: -20px;
+    }
+  }
+
+  &--combination::before {
+    width: 72px;
+    height: 77px;
+    top: -30px;
+    right: -10px;
+    background-image: url("../img/tariffs/combination.png");
+
+    @include media-breakpoint-up(lg) {
+      width: 96px;
+      height: 102px;
+      top: -40px;
+      right: -10px;
+    }
+  }
+
+  &--post::before {
+    width: 83px;
+    height: 84px;
+    top: -30px;
+    right: -10px;
+    background-image: url("../img/tariffs/post.png");
+
+    @include media-breakpoint-up(lg) {
+      width: 113px;
+      height: 111px;
+      top: -50px;
+      right: -10px;
+    }
+  }
+
+  &--parcel::before {
+    width: 112px;
+    height: 109px;
+    top: -30px;
+    right: -10px;
+    background-image: url("../img/tariffs/parcel.png");
+
+    @include media-breakpoint-up(lg) {
+      width: 150px;
+      height: 146px;
+      top: -50px;
+      right: -10px;
+    }
   }
 }
 
