--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -46,6 +46,7 @@ $yellow: #ffe200;
 $blue: #1467ff;
 $blue-dark: #084fd1;
 $blue-light: #bbd3ff;
+$blue-light-1: #ddeaff;
 $grey-dark: #282828;
 $grey-light: #bfbfbf;
 $grey-medium: #808080;
