--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,7 @@
 @import "components/main-nav";
 @import "components/user-nav";
 @import "components/button";
+@import "components/slider-nav";
 @import "components/main-banner";
 @import "components/advantages";
 @import "components/recommendation";
@@ -50,3 +51,5 @@
 @import "components/calculator";
 @import "components/tariffs";
 @import "components/tariff";
+@import "components/work-scheme";
+@import "components/promo-slider";
