--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,3 +54,4 @@
 @import "components/tariff";
 @import "components/work-scheme";
 @import "components/promo-slider";
+@import "components/features";
