--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -49,5 +49,6 @@ $blue-light: #bbd3ff;
 $blue-light-1: #ddeaff;
 $grey-dark: #282828;
 $grey-light: #bfbfbf;
+$grey-light-1: #c1c1c1;
 $grey-medium: #808080;
 $grey-special: #5d5d5d;
