--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,3 +55,5 @@
 @import "components/work-scheme";
 @import "components/promo-slider";
 @import "components/features";
+@import "components/reviews";
+@import "components/review";
