--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,6 +46,7 @@
 @import "components/recommendation";
 @import "components/service";
 @import "components/subscribe";
+@import "components/additional";
 @import "components/social";
 @import "components/form";
 @import "components/calculator";
