Добавляет мобильное меню

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -3,6 +3,10 @@
   width: 112px;
   height: 17px;
 
+  img {
+    display: block;
+  }
+
   @include media-breakpoint-up(xl) {
     width: 205px;
     height: 30px;
