--- a/src/scss/components/_service.scss
+++ b/src/scss/components/_service.scss
@@ -2,7 +2,7 @@
   margin-bottom: 66px;
 }
 
-.service__wapper {
+.service__wrapper {
   position: relative;
   text-align: center;
 
@@ -57,7 +57,7 @@
   }
 }
 
-.servica__list {
+.service__list {
   @include list-reset;
 
   text-align: start;
