--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,7 +37,7 @@
 @import "components/footer";
 @import "components/logo";
 @import "components/nav-toggle";
-@import "components/navigation";
+@import "components/footer-nav";
 @import "components/main-nav";
 @import "components/user-nav";
 @import "components/button";
